# UJI_CNC_IEC61499

./: .gitignore  README.md
FORTE/: AUTHORS  CMakeLists.txt  COPYING  README  TODO  config.h.in  fortestyle.xml
FORTE/buildsupport/: GCov.cmake  forte.cmake  generate_modules_cmake_file.cmake  generate_stringlist.cmake  generate_stringlist_include_files.cmake
FORTE/buildsupport/scripts/: generate_init.cmake
FORTE/doc/coding_rules/src/: forte_coding_rules.tex
FORTE/src/: CMakeLists.txt  forte.h  forteinit.cpp.in  forteinit.h.in  gen_include.cpp.in  stringlist.cpp.in  stringlist.h.in
FORTE/src/arch/: CMakeLists.txt  bsdsocketinterf.cpp  bsdsocketinterf.h  datatype.h  devlog.cpp  devlog.h  fdselecthand.cpp  fdselecthand.h  genfortealloc.h  timerha.cpp  timerha.h
FORTE/src/arch/be_m1/: CMakeLists.txt  fortealloc.h  fortemodule.cpp  fortemodule.h  sockhand.h  stdint.h  sync.cpp  sync.h  thread.cpp  thread.h  vxworkstimeha.cpp  vxworkstimeha.h
FORTE/src/arch/ecos/: CMakeLists.txt  ecoscppinit.cpp  ecostiha.cpp  ecostiha.h  fortealloc.h  sockhand.h  sync.cpp  sync.h  thread.cpp  thread.h
FORTE/src/arch/netos/: CMakeLists.txt  fortealloc.h  root.cpp  sockhand.h  sync.cpp  sync.h  thread.cpp  thread.h  txtimeha.cpp  txtimeha.h
FORTE/src/arch/posix/: CMakeLists.txt  fortealloc.h  main.cpp  muxedsercommlayer.cpp  muxedsercommlayer.h  pctimeha.cpp  pctimeha.h  sercommlayer.cpp  sercommlayer.h  sockhand.h  sync.cpp  sync.h  thread.cpp  thread.h
FORTE/src/arch/win32/: CMakeLists.txt  externtimeha.cpp  externtimeha.h  fortealloc.h  main.cpp  pctimeha.cpp  pctimeha.h  sockhand.h  sync.cpp  sync.h  thread.cpp  thread.h
FORTE/src/core/: CMakeLists.txt  adapter.cpp  adapter.h  adapterconn.cpp  adapterconn.h  basicfb.cpp  basicfb.h  cfb.cpp  cfb.h  class1objhand.cpp  class1objhand.h  conn.cpp  conn.h  convert_functions.h  dataconn.cpp  dataconn.h  devexec.cpp  devexec.h  device.cpp  device.h  ecet.cpp  ecet.h  esfb.h  event.h  eventconn.cpp  eventconn.h  extevhan.cpp  extevhan.h  forteiterator.h  fortelist.h  fortenode.h  funcbloc.cpp  funcbloc.h  iec61131_functions.cpp  iec61131_functions.h  if2indco.cpp  if2indco.h  mgmcmd.h  mgmcmdstruct.h  monitor.cpp  (+7 more)
FORTE/src/core/cominfra/: CMakeLists.txt  comcallback.h  comlayer.cpp  comlayer.h  comlayersmanager.cpp.in  comlayersmanager.h  commfb.cpp  commfb.h  comtypes.h  fbdkasn1layer.cpp  fbdkasn1layer.h  ipcomlayer.cpp  ipcomlayer.h  localcomlayer.cpp  localcomlayer.h
FORTE/src/core/datatypes/: CMakeLists.txt  forte_any.cpp  forte_any.h  forte_any_bit.cpp  forte_any_bit.h  forte_any_date.cpp  forte_any_date.h  forte_any_derived.h  forte_any_elementary.cpp  forte_any_elementary.h  forte_any_int.cpp  forte_any_int.h  forte_any_magnitude.cpp  forte_any_magnitude.h  forte_any_num.cpp  forte_any_num.h  forte_any_real.cpp  forte_any_real.h  forte_any_string.cpp  forte_any_string.h  forte_array.cpp  forte_array.h  forte_bool.cpp  forte_bool.h  forte_byte.cpp  forte_byte.h  forte_date.cpp  forte_date.h  forte_date_and_time.cpp  forte_date_and_time.h  forte_dint.cpp  forte_dint.h  forte_dword.cpp  forte_dword.h  forte_int.cpp  forte_int.h  forte_lint.cpp  forte_lint.h  forte_lreal.cpp  forte_lreal.h  (+28 more)
FORTE/src/core/utils/: CMakeLists.txt  anyhelper.h  singlet.h  staticassert.h  string_utils.cpp  string_utils.h
FORTE/src/modules/CNC8070/: CMakeLists.txt  L0_8070Service.cpp  L0_8070Service.h  L0_CNCEncap.cpp  L0_CNCEncap.h  L0_ReqManager.cpp  L0_ReqManager.h  L0_SendBlk.cpp  L0_SendBlk.h  L0_State.cpp  L0_State.h  L0_StateHandler.cpp  L0_StateHandler.h  T1_Adapter.cpp  T1_Adapter.h  T1_Counter.cpp  T1_Counter.h  T1_InsArray.cpp  T1_InsArray.h  T1_SIFB.cpp  T1_SIFB.h  T2_Counter.cpp  T2_Counter.h  T2_SIFB.cpp  T2_SIFB.h  test1.cpp  test1.h
FORTE/src/modules/IEC61131-3/: CMakeLists.txt
FORTE/src/modules/Internal_Classes/: CMakeLists.txt  GlobalUtils.cpp  GlobalUtils.h  ManOrder.cpp  ManPart.h  PPArray.h  PP_DDBB.cpp  PP_DDBB.h  PP_Family.cpp  PP_Family.h  ProcessPlan.cpp  ProcessPlan.h  Subphase.cpp  Subphase.h  Tool.cpp  Tool.h  Tool_Table.cpp  Tool_Table.h
FORTE/src/modules/OSCAT/: CMakeLists.txt
FORTE/src/modules/UJI_61499/: CM_ChkService.h  CM_Merge2E2USINT.cpp  CM_Merge2E2USINT.h  CM_Merge2PartInfo.cpp  CMakeLists.txt
FORTE/src/modules/UJI_FMS/: CMakeLists.txt
FORTE/src/modules/be_m1/: BE_RMT_DEV.cpp  BE_RMT_DEV.h  BE_SVIFB.cpp  BE_SVIFB.h  CMakeLists.txt  GET_CHAN_INFO.cpp  GET_CHAN_INFO.h  GET_VALUE.cpp  GET_VALUE.h  SET_VALUE.cpp  SET_VALUE.h  SVIreceive_1.cpp  SVIreceive_1.h  SVIsend_1.cpp  SVIsend_1.h
FORTE/src/modules/cbc/: Analog.cpp  Analog.h  Analog08.cpp  Analog08.h  Analog10.cpp  Analog10.h  Beeper.cpp  Beeper.h  BlackButton.cpp  BlackButton.h  Button.cpp  Button.h  ButtonA.cpp  ButtonA.h  ButtonB.cpp  ButtonB.h  CBC_OFF.cpp  CBC_OFF.h  CMakeLists.txt  Camera.cpp  Camera.h  Digital.cpp  Digital.h  DownButton.cpp  DownButton.h  LeftButton.cpp  LeftButton.h  MotorDC.cpp  MotorDC.h  MotorPOS.cpp  MotorPOS.h  MotorPWR.cpp  MotorPWR.h  MotorVEL.cpp  MotorVEL.h  RightButton.cpp  RightButton.h  Servo.cpp  Servo.h  TrkBlob.cpp  (+40 more)
FORTE/src/modules/convert/: BOOL2BOOL.cpp  BOOL2BOOL.h  BYTE2BYTE.cpp  BYTE2BYTE.h  CMakeLists.txt  DINT2DINT.cpp  DINT2DINT.h  DWORD2DWORD.cpp  DWORD2DWORD.h  INT2INT.cpp  INT2INT.h  LREAL2LREAL.cpp  LREAL2LREAL.h  REAL2REAL.cpp  REAL2REAL.h  SINT2SINT.cpp  SINT2SINT.h  STRING2DT.cpp  STRING2DT.h  STRING2STRING.cpp  STRING2STRING.h  TIME2TIME.h  UDINT2UDINT.cpp  UDINT2UDINT.h  UINT2UINT.cpp  UINT2UINT.h  USINT2USINT.cpp  USINT2USINT.h  WORD2WORD.cpp  WORD2WORD.h  WSTRING2WSTRING.cpp  WSTRING2WSTRING.h
FORTE/src/modules/lms/: CMakeLists.txt  LC_AD.cpp  LC_AD.h  LC_LED.cpp  LC_LED.h  LC_LT.cpp  LC_LT.h  LC_SOUND.cpp  LC_SOUND.h  LC_TOUCH.cpp  LC_TOUCH.h  LMSUSBLayer.cpp  LMSUSBLayer.h  L_AD.cpp  L_AD.h  L_BATTERY.cpp  (+15 more)
FORTE/src/stdfblib/: CMakeLists.txt  timedfb.cpp  timedfb.h
FORTE/templates/: template.cpp  template.h
FORTE/tests/: CMakeLists.txt  forte_boost_tester.cpp
FORTE/tests/core/: CMakeLists.txt  stringdicttests.cpp  typelibdatatypetests.cpp
FORTE/tests/stdfblib/: CMakeLists.txt
(+1648 files in other folders)
