#############################################################################
# Comparison
#############################################################################
forte_add_sourcefile_hcpp(F_GT)
forte_add_sourcefile_hcpp(F_EQ)
forte_add_sourcefile_hcpp(F_GE)
forte_add_sourcefile_hcpp(F_LE)
forte_add_sourcefile_hcpp(F_LT)
forte_add_sourcefile_hcpp(F_NE)


#add_subdirectory(tests)